# BFam-Rental

./: .gitignore  README.md  render.yaml
Specs/: BFam Rental Stories.txt  Deployment-Environments.md  Implementation-Plan.md  Style-Guide.md  supabase-migration-booking-contact-fields.sql  supabase-migration-booking-logistics.sql  supabase-migration-booking-requests-tax-totals.sql  (+21 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  branding.py  config.py  db.py  deps.py  main.py  schemas.py
backend/app/repos/: item_images.py
backend/app/routers/: admin.py  booking_actions.py  booking_requests.py  items.py  stripe_webhook.py
backend/app/services/: admin_notify.py  auth0_jwt.py  booking.py  booking_confirmation.py  booking_documents.py  booking_events.py  booking_response.py  booking_storage.py  contract_pdf.py  contract_render.py  contract_signing.py  dates.py  delivery_pricing.py  e2e_cleanup.py  item_availability.py  item_availability_seed.py  item_images_storage.py  pickup_instructions_email.py  quote_email.py  sales_tax.py  stripe_checkout.py  stripe_customer_setup.py  stripe_deposit_refund.py  stripe_payment_reconcile.py
backend/scripts/: delete_all_items.py  wipe_non_catalog_data.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_notify.py  test_adversarial.py  test_auth0_deps.py  test_booking.py  test_booking_api.py  test_customer_account.py  test_edge_cases.py  test_items_api.py  test_pickup_instructions_email.py  test_quote_email_no_track.py  test_settings_public_url.py  test_stripe_api.py
(+83 files in other folders)
